--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "google-cloud-firestore>=2.23.0",
     "google-cloud-storage>=3.8.0",
     "jinja2>=3.1.6",
-    "pydantic>=2.12.5",
+    "pydantic[email]>=2.12.5",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.20",
     "uvicorn>=0.39.0",
