--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 cryptography==46.0.4
+dnspython==2.8.0
+email-validator==2.3.0
 fastapi==0.128.0
 firebase-admin==7.1.0
 google-api-core==2.29.0
